# chatten

./: .gitignore  LICENSE  Makefile  README.md  app.yml  databricks.yml  pyproject.toml
scripts/: cleanup.py
src/_chatten_ui/: DESCRIPTION  MANIFEST.in  NAMESPACE  Project.toml  README.md  __init__.py  package-lock.json  package.json  usage.py  webpack.config.js
src/_chatten_ui/R/: chat.R  chatten.R  internal.R
src/_chatten_ui/chatten_ui/: Chat.py  Chatten.py  __init__.py  _imports_.py  metadata.json  package-info.json
src/_chatten_ui/man/: chat.Rd  chatten.Rd
src/_chatten_ui/src/: ChattenUi.jl
src/_chatten_ui/src/jl/: chat.jl  chatten.jl
src/_chatten_ui/src/ts/: index.ts
src/_chatten_ui/src/ts/blocks/: Chat.tsx  PdfViewer.tsx
src/_chatten_ui/src/ts/components/: Chatten.tsx
src/_chatten_ui/src/ts/lib/: api.ts  types.ts
src/chatten/: __init__.py  _version.py  app.py  config.py  dash_app.py  models.py  state.py
