[project]
name = "chatten"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "renardeinside", email = "polarpersonal@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "chatten-ui",
    "dash>=2.18.2",
    "databricks-sdk>=0.43.0",
    "databricks-sql-connector>=4.0.0",
    "fastapi>=0.115.8",
    "loguru>=0.7.3",
    "pypdf>=5.2.0",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "rapidfuzz>=3.12.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "dash[dev]>=2.18.2",
    "ruff>=0.9.5",
    "wheel>=0.45.1",
]

[tool.uv.sources]
chatten-ui = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]
