[project]
name = "chatten"
dynamic = ["version"]
description = "RAG with sources on Databricks platform"
readme = "README.md"
authors = [{ name = "renardeinside", email = "polarpersonal@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.3",
    "pydantic-settings>=2.7.1",
]

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "dash[dev]>=2.18.2",
    "pip>=25.0",
    "ruff>=0.9.5",
    "typer>=0.15.1",
    "wheel>=0.45.1",
]

[tool.uv.sources]
chatten-ui = { workspace = true }

[tool.uv.workspace]
members = ["packages/*"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/chatten/_version.py"
